--- a/src/css/style.css
+++ b/src/css/style.css
@@ -119,7 +119,7 @@ html {
     font-size: 60px;
     font-weight: normal;
     line-height: normal;
-    color: var(--light-color);
+    color: red;
     text-transform: uppercase;
 
     @media screen and (max-width:768px) {
